Connected both libraries

--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@botcomet/protocol",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "The BotComet protocol types and functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "author": "The BotComet Team",
   "license": "MIT"
