--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -6,8 +6,7 @@
   "description": "BotComet's Comet implementation",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@botcomet/protocol": "^0.0.1",
     "discord.js": "^14.7.1",
     "ws": "^8.12.1"
   }
