--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.34.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
