--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -9,5 +9,10 @@
     "build": "tsc"
   },
   "author": "The BotComet Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0"
+  }
 }
