--- a/packages/station/package.json
+++ b/packages/station/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@botcomet/protocol",
-  "version": "0.0.1",
+  "name": "@botcomet/station",
   "type": "module",
-  "description": "The BotComet protocol types and functions",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "0.0.1",
+  "description": "The BotComet Station implementation",
   "scripts": {
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "The BotComet Team",
   "license": "MIT",
