--- a/packages/station/package.json
+++ b/packages/station/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.1",
   "description": "The BotComet Station implementation",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "The BotComet Team",
   "license": "MIT",
   "devDependencies": {
@@ -13,5 +15,9 @@
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@botcomet/protocol": "^0.0.1",
+    "ws": "^8.12.1"
   }
 }
