--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -14,5 +14,9 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0"
+  },
+  "dependencies": {
+    "@botcomet/protocol": "^0.0.1",
+    "ws": "^8.12.1"
   }
 }
