--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "@botcomet/plugin",
+  "name": "@botcomet/auth",
   "version": "0.0.1",
-  "description": "The BotComet Plugin implementation",
   "type": "module",
+  "description": "The BotComet Authentication implementation",
   "scripts": {
     "build": "tsc"
   },
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
   "author": "The BotComet Team",
   "license": "MIT",
   "devDependencies": {
@@ -15,9 +13,5 @@
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@botcomet/protocol": "^0.0.1",
-    "ws": "^8.12.1"
   }
 }
