--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -9,9 +9,14 @@
   "author": "The BotComet Team",
   "license": "MIT",
   "devDependencies": {
+    "@types/node-rsa": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.0",
+    "node-rsa": "^1.1.1"
   }
 }
