Added basic auth backbone

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc"
   },
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "The BotComet Team",
   "license": "MIT",
   "devDependencies": {
