--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@botcomet/auth": "^0.0.1",
     "@botcomet/protocol": "^0.0.1",
     "discord.js": "^14.7.1",
     "ws": "^8.12.1"
