--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "description": "The BotComet Authentication implementation",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src --ext .ts",
+    "test:ts": "tsc --noEmit"
   },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
