--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -6,7 +6,9 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src --ext .ts",
+    "test:ts": "tsc --noEmit"
   },
   "author": "The BotComet Team",
   "license": "MIT",
