--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -2,9 +2,13 @@
   "name": "@botcomet/comet",
   "version": "0.0.1",
   "type": "module",
-  "private": true,
   "description": "BotComet's Comet implementation",
-  "main": "index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .ts",
