--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "type": "module",
   "description": "The BotComet protocol types and functions",
-  "module": "dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
