--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .ts",
-    "test:ts": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "The BotComet Team",
