--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -18,6 +18,7 @@
   "author": "The BotComet Team",
   "license": "MIT",
   "devDependencies": {
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
@@ -26,7 +27,6 @@
   "dependencies": {
     "@botcomet/auth": "^0.0.1",
     "@botcomet/protocol": "^0.0.1",
-    "discord.js": "^14.7.1",
     "ws": "^8.12.1"
   }
 }
