--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@botcomet/adapter": "^0.1.0",
     "@botcomet/auth": "^0.0.1",
     "@botcomet/protocol": "^0.0.1",
     "ws": "^8.12.1"
