--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -21,5 +21,8 @@
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.35.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@botcomet/protocol": "^0.0.1"
   }
 }
