--- a/packages/adapter-discord/package.json
+++ b/packages/adapter-discord/package.json
@@ -10,10 +10,17 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "lint": "eslint src --ext .ts",
+    "typecheck": "tsc --noEmit"
   },
   "author": "The BotComet Team",
   "license": "MIT",
+  "dependencies": {
+    "@botcomet/adapter": "^0.1.0",
+    "@botcomet/protocol": "^0.0.1",
+    "discord.js": "^14.7.1"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
