--- a/packages/adapter-discord/package.json
+++ b/packages/adapter-discord/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "The BotComet Discord Adapter",
   "type": "module",
+  "private": true,
   "exports": {
     ".": {
       "import": "./dist/index.js"
@@ -16,6 +17,10 @@
   },
   "author": "The BotComet Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/botcomet/botcomet.git"
+  },
   "dependencies": {
     "@botcomet/adapter": "^0.1.0",
     "@botcomet/protocol": "^0.0.1",
