--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -16,6 +16,11 @@
   },
   "author": "The BotComet Team",
   "license": "MIT",
+  "readme": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/botcomet/botcomet.git"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
