--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,6 +16,10 @@
   "types": "dist/index.d.ts",
   "author": "The BotComet Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/botcomet/botcomet.git"
+  },
   "devDependencies": {
     "@types/node-rsa": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
