--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -17,6 +17,10 @@
   "keywords": [],
   "author": "The BotComet Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/botcomet/botcomet.git"
+  },
   "devDependencies": {
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
