--- a/packages/comet/package.json
+++ b/packages/comet/package.json
@@ -8,6 +8,9 @@
       "import": "./dist/index.js"
     }
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
