--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -8,6 +8,9 @@
       "import": "./dist/index.js"
     }
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .ts",
