--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botcomet/auth",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
   "type": "module",
   "description": "The BotComet Authentication implementation",
   "exports": {
