--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botcomet/adapter",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "description": "Generic BotComet Comet Adapter",
   "type": "module",
   "exports": {
@@ -31,6 +31,6 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@botcomet/protocol": "^0.0.1"
+    "@botcomet/protocol": "^0.1.0-alpha.0"
   }
 }
