--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botcomet/plugin",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
   "description": "The BotComet Plugin implementation",
   "type": "module",
   "exports": {
@@ -30,8 +30,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@botcomet/auth": "^0.0.1",
-    "@botcomet/protocol": "^0.0.1",
+    "@botcomet/auth": "^0.1.0-alpha.0",
+    "@botcomet/protocol": "^0.1.0-alpha.0",
     "ws": "^8.12.1"
   }
 }
